# Nova-AutoScript

./: .gitignore  LICENSE  README.md  main.py  main.spec  minitouch_test.py  myapp.spec  package-lock.json  package.json  path_util.py  pyproject.toml  requirements.txt  ui_test.py
.github/workflows/: pages.yml  release.yml
app/: GuiApp.py  GuiAppConfigurationTabs.py  GuiAppSetting.py  GuiAppTools.py
core/: ControlTools.py  DeviceController.py  GuiApp.py  GuiAppSetting.py  LoadTemplates.py  LogElementHandler.py  LogManager.py  MailClient.py  MainProcess.py  MultiTargeting.py  NovaException.py  OcrTools.py  TaskController.py  load_templates.py
core/project/: Module.py
core/task/: TaskBase.py
core/task/daily_tasks/: AllianceShop.py  DailyTest.py  Order.py  Radar.py  Wreckage.py
core/task/outer_tasks/: BlessingFlip.py
core/task/permanent_tasks/: Permanent.py  Start.py
core/task/test_tasks/: ChangeAlloys.py  ScreenshotTest.py  Test1.py  Test2.py  Test3.py
core/tools/: ControlTools.py  OcrTools.py  RapidOcr.py
database/: db_session.py  nova_auto_script.db
db/: init_marker.txt  init_script.sql  nova_auto_script.db
device_operation/: AdbClient.py  DeviceUtils.py  RapidOcr.py  SQLInitialization.py  SQLiteClient.py  Settings.py  check_update.py
models/: Config.py  Module.py  Template.py  __init__.py
source/: index.md
source/_data/wiki/: hexo-stellar.yml
test/: RapidOcr.py  matching_test.py  mstc_test.py  ocr_test.py
