[project]
name = "novaah"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy==2.2.4",
    "nicegui==2.13.0",
    "opencv_python==4.11.0.86",
    "pywebview==5.4",
    "peewee==3.17.9",
    "pyinstaller>=6.13.0",
    "chardet>=5.2.0",
    "pydantic-settings>=2.11.0",
    "mtc",
    "msc",
    "rapidocr-onnxruntime>=1.4.4",
    "onnxruntime>=1.20.0",
]

[tool.uv.sources]
mtc = { git = "https://github.com/Einzieg/mtc" }
msc = { git = "https://github.com/Einzieg/msc" }

[project.optional-dependencies]
gpu = [
    "onnxruntime-gpu>=1.20.0",
]
